{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 35,
  "lineage": "23812ab7-de8c-b128-ee72-e364d4c5b03c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "nb-study-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:targetgroup/nb-study-web/d4486ea9d099382f-20201008175902598100000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:targetgroup/nb-study-web/d4486ea9d099382f",
            "target_id": "i-06a03460bef590e76"
          },
          "dependencies": [
            "aws_instance.web_pu1a",
            "aws_lb_target_group.nb-study-web",
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "nb-study-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:targetgroup/nb-study-web/d4486ea9d099382f-20201008175902677700000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:targetgroup/nb-study-web/d4486ea9d099382f",
            "target_id": "i-06fb3466d8011028d"
          },
          "dependencies": [
            "aws_instance.web_pu1c",
            "aws_lb_target_group.nb-study-web",
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_pu1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce107ae7af2e92b5",
            "arn": "arn:aws:ec2:ap-northeast-1:788574154804:instance/i-06a03460bef590e76",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a03460bef590e76",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nb-study-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c51244deca86386",
            "private_dns": "ip-10-1-1-67.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.67",
            "public_ip": "13.113.32.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0acaa9f43cfb04e71",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f772a29d8355a914",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-045f535d35db080d4"
            ]
          },
          "dependencies": [
            "aws_key_pair.nb-study-key",
            "aws_security_group.nb-study-web-instance",
            "aws_subnet.public_1a",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_pu1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce107ae7af2e92b5",
            "arn": "arn:aws:ec2:ap-northeast-1:788574154804:instance/i-06fb3466d8011028d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fb3466d8011028d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nb-study-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f96eae1343b8f34d",
            "private_dns": "ip-10-1-2-234.ap-northeast-1.compute.internal",
            "private_ip": "10.1.2.234",
            "public_ip": "13.230.189.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a05d9fc378cb3bef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d1acb2d14f815d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-045f535d35db080d4"
            ]
          },
          "dependencies": [
            "aws_key_pair.nb-study-key",
            "aws_security_group.nb-study-web-instance",
            "aws_subnet.public_1c",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nb-study",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:788574154804:internet-gateway/igw-0027dfeea42b0dd5b",
            "id": "igw-0027dfeea42b0dd5b",
            "owner_id": "788574154804",
            "tags": {
              "Name": "nb-study"
            },
            "vpc_id": "vpc-0af998c67b5bb89e7"
          },
          "dependencies": [
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nb-study",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:loadbalancer/app/nb-study/c1b9814949d8070e",
            "arn_suffix": "app/nb-study/c1b9814949d8070e",
            "dns_name": "nb-study-812406779.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:loadbalancer/app/nb-study/c1b9814949d8070e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nb-study",
            "security_groups": [
              "sg-0d8e09201daa8cf36"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a8d1acb2d14f815d"
              },
              {
                "subnet_id": "subnet-0f772a29d8355a914"
              }
            ],
            "subnets": [
              "subnet-0a8d1acb2d14f815d",
              "subnet-0f772a29d8355a914"
            ],
            "vpc_id": "vpc-0af998c67b5bb89e7",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.nb-study-alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nb-study-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:listener/app/nb-study/c1b9814949d8070e/4e7a4b88c5be2eb6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:targetgroup/nb-study-web/d4486ea9d099382f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:listener/app/nb-study/c1b9814949d8070e/4e7a4b88c5be2eb6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:loadbalancer/app/nb-study/c1b9814949d8070e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.nb-study",
            "aws_lb_target_group.nb-study-web",
            "aws_security_group.nb-study-alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nb-study-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:targetgroup/nb-study-web/d4486ea9d099382f",
            "arn_suffix": "targetgroup/nb-study-web/d4486ea9d099382f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:788574154804:targetgroup/nb-study-web/d4486ea9d099382f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nb-study-web",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0af998c67b5bb89e7"
          },
          "dependencies": [
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nb-study-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0027dfeea42b0dd5b",
            "id": "r-rtb-0d715e5a6fed95d081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d715e5a6fed95d08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.nb-study",
            "aws_route_table.nb-study-public",
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nb-study-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d715e5a6fed95d08",
            "owner_id": "788574154804",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0027dfeea42b0dd5b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nb-study-route-table"
            },
            "vpc_id": "vpc-0af998c67b5bb89e7"
          },
          "dependencies": [
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ccd8828141d3a44",
            "route_table_id": "rtb-0d715e5a6fed95d08",
            "subnet_id": "subnet-0f772a29d8355a914"
          },
          "dependencies": [
            "aws_route_table.nb-study-public",
            "aws_subnet.public_1a",
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090234135e9f08759",
            "route_table_id": "rtb-0d715e5a6fed95d08",
            "subnet_id": "subnet-0a8d1acb2d14f815d"
          },
          "dependencies": [
            "aws_route_table.nb-study-public",
            "aws_subnet.public_1c",
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nb-study-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:788574154804:security-group/sg-0d8e09201daa8cf36",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8e09201daa8cf36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nb-study-alb",
            "name_prefix": "",
            "owner_id": "788574154804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nb-study-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af998c67b5bb89e7"
          },
          "dependencies": [
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nb-study-web-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:788574154804:security-group/sg-045f535d35db080d4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045f535d35db080d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nb-study-web-instance",
            "name_prefix": "",
            "owner_id": "788574154804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nb-study-web-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af998c67b5bb89e7"
          },
          "dependencies": [
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:788574154804:subnet/subnet-0f772a29d8355a914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0f772a29d8355a914",
            "map_public_ip_on_launch": false,
            "owner_id": "788574154804",
            "tags": {
              "Name": "nb-study-public-1a"
            },
            "vpc_id": "vpc-0af998c67b5bb89e7"
          },
          "dependencies": [
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:788574154804:subnet/subnet-0a8d1acb2d14f815d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0a8d1acb2d14f815d",
            "map_public_ip_on_launch": false,
            "owner_id": "788574154804",
            "tags": {
              "Name": "nb-study-public-1c"
            },
            "vpc_id": "vpc-0af998c67b5bb89e7"
          },
          "dependencies": [
            "aws_vpc.nb-study"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nb-study",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:788574154804:vpc/vpc-0af998c67b5bb89e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f67082501dc84503",
            "default_route_table_id": "rtb-0ae9773204dcf5c2c",
            "default_security_group_id": "sg-0d4efa0bf4dda5924",
            "dhcp_options_id": "dopt-51149936",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0af998c67b5bb89e7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ae9773204dcf5c2c",
            "owner_id": "788574154804",
            "tags": {
              "Name": "nb-study"
            }
          }
        }
      ]
    }
  ]
}